--- a/views/newURL.ejs
+++ b/views/newURL.ejs
@@ -12,8 +12,9 @@
 
           <form action="/newURL/create" method="post">
             <label for="urlInput">Enter URL:</label>
-            <input type="url" id="urlInput" name="imageUrl" required>
-            <button type="submit">Save URL</button>
+            <input type="url" id="urlInput" name="imageUrl" placeholder="Url Here">
+            <input type="text" id="descriptionInput" name="description" placeholder="Description of URL Here">
+            <button type="submit">Save image</button>
         </form>
 
         </div>
