--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,7 @@ a {
   right: 10px; /* Position 10 pixels from the right */
   height: 20px;
   width: auto; /* Let the width adjust automatically to maintain aspect ratio */
-  margin-top:-25px; 
+  top:-25px; 
   padding-left:29px;
   padding-right:618px;
   padding-top:10px;
@@ -155,31 +155,29 @@ a {
 
 .DeleteOutfit  {
   margin-left: 7px;
+  position:absolute;
 }
 
 .DeleteOutfit img {
-  position:relative;
+  position: absolute;
   height: 10px;
   width: auto;
   padding:0px;
-  margin-left: -7px;
-  margin-right: 1px;
-  margin-top: -3px;
-  margin-bottom: 59px;
-  opacity: 0;
+  margin: 0px;
+  left: 85px;
+  opacity: .20;
 }
 
 .DeleteOutfit:hover img {
-  position:relative;
+  position: absolute;
   height: 10px;
   width: auto;
   padding:0px;
-  margin-left: -7px;
-  margin-right: 1px;
-  margin-top: -3px;
-  margin-bottom: 59px;
-  opacity: .9;
+  margin: 0px;
+  left: 85px;
+  opacity: .90;
 }
+
 
  .DeleteOutfit button {
   position: absolute; /* Set the button to absolute positioning */
@@ -194,6 +192,66 @@ a {
   background-color: transparent;
  }
 
+
+ .pencil img{
+  position:absolute;
+  height: 10px; 
+  width: auto;
+  border:0px solid black;
+  margin: 0px;
+  padding:0px;
+  margin-right: 3px;
+  top: 25px;
+  opacity: .90;
+  cursor: pointer;
+ }
+
+ 
+ #descriptionsBorder {
+  padding: 4px;
+  overflow-y: auto;
+  height:65px;
+  width:150px;
+ }
    
+ .addDescription button {
+  position: absolute; /* Set the button to absolute positioning */
+  z-index: 1; /* Ensure the button appears above other content */
+  background-color: transparent;
+  margin-left: 55px;
+  margin-top: 1px;
+  margin-bottom: 59px;
+  height: 12px;
+  width: 22px;
+  border: 3px black;
+  opacity: .20;
+ }
+
+ .addDescription:hover button {
+  position: absolute; /* Set the button to absolute positioning */
+  z-index: 1; /* Ensure the button appears above other content */
+  background-color: transparent;
+  margin-left: 55px;
+  margin-top: 1px;
+  margin-bottom: 59px;
+  height: 12px;
+  width: 22px;
+  border: 3px black;
+  opacity: .90;
+ }
+
+.addDescription input {
+  display: none;
+}
+
+.submitDescription {
+  display: block;
+  height: 50px;
+  width:auto;
+  border-radius: 10px;
+  background-color: grey;
+}
+
+
 
  
